fix get records bug and comment field / vote box z-index bug

--- a/src/components/postBlock/postBlock.scss
+++ b/src/components/postBlock/postBlock.scss
@@ -183,7 +183,7 @@
         top: 12px;
         left: 20px;
         width: 200px;
-        z-index: 7;
+        z-index: 1;
         padding: 10px;
         background-color: rgba(51, 51, 51, 0.8);
         border-radius: 4px;
