--- a/src/components/voteBox/voteBox.scss
+++ b/src/components/voteBox/voteBox.scss
@@ -8,6 +8,7 @@
     text-align: center;
     vertical-align: middle;
     font-size: $small-font-size;
+    z-index: 2;
     background: radial-gradient(99.12% 159.6% at 92.94% 95.93%, rgba(228, 211, 255, 0.8) 0%, rgba(229, 238, 255, 0.8) 62.33%, rgba(238, 225, 255, 0.8) 69.62%, rgba(218, 215, 248, 0.8) 81.02%);
   
     .vote-box {
